netcfg (0.47) UNRELEASED; urgency=low

  * Joey Hess
    - Use three dots in ellipses for consistency.
  * Joshua Kwan
    - Brown paper bag: Fix egregiously broken is_valid_ip() test.
  * Translations :
    - Philippe Batailler
      - Updated French translation (fr.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - KEnshi Muto
      - Updated Japanese translation (ja.po)
    - Giuseppe Sacco
      - Updated italian translation (it.po)
    - Konstantinos Margaritis
      - Updated Greek translation (el.po)
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation (zh_CN.po)
    - Jordi Mallach
      - Updated Catalan translation (ca.po)
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po)
    - Elian Myftiu
      - Updated Albanian translation (sq.po)
    - Håvard Korsvoll
      - Updated Norwegian, nynorsk (nn.po) translation.

 -- Joshua Kwan <joshk@triplehelix.org>  Tue, 24 Feb 2004 17:55:11 -0800

netcfg (0.46) unstable; urgency=low

  * Joshua Kwan
    - Added wireless configuration support for ESSIDs and WEP keys
      using libiw. (Closes: #225512, #214491)
    - Made default text for nameserver match gateway when in static
      configuration. (Closes: #231106)
    - Bump netcfg/get_domain to priority high. (Closes: #231107)
      using libiw.
    - Check entered IP addresses for gateway, netmask (special case allowing
      '0' entries), IP address, and PPP endpoint. (Closes: #224912)
  * Joey Hess
    - First round of template polishing on new templates.
  * Translations:
    - Miroslav Kure
      - Updated Czech translation
    - Elian Myftiu
      - Updated Albanian translation (sq.po) 
    - Carlos Z.F. Liu
      - Updated Simplified Chinese translation (zh_CN.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po)