@@ -3,7 +3,8 @@ netcfg (0.47) UNRELEASED; urgency=low
   * Joey Hess
     - Use three dots in ellipses for consistency.
   * Joshua Kwan
-    - Brown paper bag: Fix egregiously broken is_valid_ip() test.
+    - Brown paper bag: Fix egregiously broken is_valid_ip() tests.
+      (In more ways than one...)
   * Translations :
     - Philippe Batailler
       - Updated French translation (fr.po)
@@ -28,7 +29,7 @@ netcfg (0.47) UNRELEASED; urgency=low
     - Håvard Korsvoll
       - Updated Norwegian, nynorsk (nn.po) translation.
 
- -- Joshua Kwan <joshk@triplehelix.org>  Tue, 24 Feb 2004 17:55:11 -0800
+ -- Joshua Kwan <joshk@triplehelix.org>  Tue, 24 Feb 2004 19:09:27 -0800
 
 netcfg (0.46) unstable; urgency=low
 
